--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="login_button_registration">Registration</string>
     <string name="home_textView_introduction_title">Open School</string>
     <string name="home_textView_introduction_body"> Open School is an mobile service which provides alternative education. It is an educational service with a special curriculum based on slack time which are nontraditional education. This school allows students to study English with more flexible time by facilitating talent donation from general people. </string>
+    <string name="toast_textView_notification">새로운 수업을 시작해주세요!</string>
 
     <!-- app -->
     <string name="toast_login_wrong_id">존재하지 않는 ID 입니다.</string>
