--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,6 @@
 
     <string-array name="Class_menu_array">
         <item>Script</item>
-        <item>Evaluation</item>
     </string-array>
 
     <!-- layout -->
@@ -39,6 +38,8 @@
     <string name="profile_textView_call_information_student_msg">He will call you soon!</string>
     <string name="profile_textView_default_msg">Connecting ...</string>
     <string name="script_textView_daily_dialogue_title">Today Dialogue</string>
+    <string name="evaluation_textView_title">Evaluation</string>
+    <string name="evaluation_textView_body">Evaluation is a systematic determination of a subject\'s merit, worth and significance, using criteria governed by a set of standards. </string>
     <string name="toast_textView_notification">새로운 수업을 시작해주세요!</string>
     <string name="toast_textView_warning">현재 가능한 수업이 없습니다!</string>
 
